Updated examples for enricher

--- a/mule3-core-components/.project
+++ b/mule3-core-components/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mule3-choice</name>
+	<name>mule3-core-components</name>
 	<comment></comment>
 	<projects>
 	</projects>
